# schemaorg-lite

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
examples/: README.md
examples/require-all/: README.md
examples/sports-event/: README.md  index.html
schemaorg/: __init__.py  _version.py  base.py  main.py  recipe.py
schemaorg/data/: __init__.py
schemaorg_lite/: main.py
schemaorg_lite/data/: __init__.py
schemaorg_lite/data/ext/attic/: attic.ttl
schemaorg_lite/data/ext/auto/: auto.ttl
schemaorg_lite/data/ext/bib/: bsdo-1.0.ttl  bsdo-atlas-examples.txt  bsdo-audiobook-examples.txt  bsdo-chapter-examples.txt  bsdo-collection-examples.txt  bsdo-newspaper-examples.txt  bsdo-thesis-examples.txt  bsdo-translation-examples.txt  comics-examples.txt
schemaorg_lite/data/ext/health-lifesci/: MedicalScholarlyArticle-examples.txt  med-health-core.ttl  medicalCondition-examples.txt  medicalGuideline-examples.txt  medicalWebpage-examples.txt  physical-activity-and-exercise.ttl
schemaorg_lite/data/ext/meta/: meta.ttl
schemaorg_lite/data/ext/pending/: issue-1045-examples.txt  issue-1045.ttl  issue-1050-examples.txt  issue-1050.ttl  issue-1062-examples.txt  issue-1062.ttl  issue-1083.ttl  issue-1156-examples.txt  issue-1156.ttl  issue-1244.ttl  issue-1253-examples.txt  issue-1253.ttl  issue-1375.ttl  issue-1389-examples.txt  issue-1397.ttl  issue-1401.ttl  issue-1423-examples.txt  issue-1423.ttl  issue-1425.ttl  issue-1448.ttl  issue-1457-examples.txt  issue-1457.ttl  issue-1495.ttl  issue-1525-examples.txt  issue-1525.ttl  issue-1559.ttl  issue-1576.ttl  issue-1589.ttl  issue-1591.ttl  issue-1624.ttl  issue-1670-examples.txt  issue-1672.ttl  issue-1689-examples.txt  issue-1698-examples.txt  issue-1741-examples.txt  issue-1755.ttl  issue-1758-examples.txt  issue-1758.ttl  issue-1759-examples.txt  issue-1759.ttl  (+127 more)
schemaorg_lite/data/releases/23.0/: httpequivs.ttl  schema-all.html  schemaorg-all-examples.txt  schemaorg-all-http-properties.csv  schemaorg-all-http-types.csv  schemaorg-all-http.jsonld  schemaorg-all-http.nq  schemaorg-all-http.nt  schemaorg-all-http.rdf  schemaorg-all-http.ttl  schemaorg-all-https-properties.csv  schemaorg-all-https-types.csv  schemaorg-all-https.jsonld  schemaorg-all-https.nq  schemaorg-all-https.nt  schemaorg-all-https.rdf  schemaorg-all-https.ttl  schemaorg-current-http-properties.csv  schemaorg-current-http-types.csv  schemaorg-current-http.jsonld  schemaorg-current-http.nq  schemaorg-current-http.nt  schemaorg-current-http.rdf  schemaorg-current-http.ttl  schemaorg-current-https-properties.csv  schemaorg-current-https-types.csv  schemaorg-current-https.jsonld  schemaorg-current-https.nq  schemaorg-current-https.nt  schemaorg-current-https.rdf  schemaorg-current-https.ttl  schemaorg-shapes.shacl  schemaorg-subclasses.shacl  schemaorg.owl
tests/: test_main.py
