[tool.pdm.options]
config = [
    "python.use_venv",
    "true",
]

[tool.pdm.dev-dependencies]
dev = [
    "crackerjack>=0.7.17",
]

[tool.ruff]
line-length = 88
target-version = "py312"
fix = true
show-fixes = true
show-source = true

[tool.ruff.isort]
force-single-line = true

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.pydocstyle]
convention = "google"

[tool.creosote]
paths = [
    "schemaorg_lite",
]
deps-file = "pyproject.toml"
exclude-deps = [
    "pdm",
    "autotyping",
    "pre-commit",
    "pdm-bump",
    "pytest",
]

[tool.codespell]
skip = "*/data/*"
quiet-level = 3
ignore-words-list = "crate,uptodate"

[tool.bandit]
target = [
    "schemaorg_lite",
]
skips = [
    "B404",
    "B603",
]

[tool.black]
target-version = [
    "py312",
]

[tool.refurb]
enable_all = true

[tool.pyright]
verboseOutput = true
include = [
    "schemaorg_lite",
]
extraPaths = [
    "__pypackages__/3.12/lib/",
]
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportOptionalMemberAccess = false
reportOptionalCall = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportPrivateUsage = "warning"
pythonVersion = "3.12"
pythonPlatform = "Darwin"

[project]
name = "schemaorg-lite"
version = "0.1.3"
description = "Python functions for applied use of schema.org"
dependencies = [
    "loguru>=0.7.2",
]
requires-python = ">=3.12"
readme = "README.md"
keywords = [
    "openschemas",
    "schema.org",
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development",
]
authors = [
    { name = "Vanessa Sochat", email = "vsoch@users.noreply.github.com" },
    { name = "lesleslie", email = "les@wedgwoodwebworks.com" },
]
maintainers = [
    { name = "lesleslie", email = "les@wedgwoodwebworks.com" },
    { name = "Vanessa Sochat", email = "vsoch@users.noreply.github.com" },
]

[project.license]
text = "BSD-3-Clause"

[project.urls]
Homepage = "https://github.com/lesleslie/schemaorg-lite"
Documentation = "https://github.com/lesleslie/schemaorg-lite"
Repository = "https://github.com/lesleslie/schemaorg-lite"

[build-system]
requires = [
    "pdm-backend",
]
build-backend = "pdm.backend"
