[dependency-groups]
dev = [
    "crackerjack>=0.10.4",
]

[tool.ruff]
line-length = 88
target-version = "py313"
fix = true
show-fixes = true
output-format = "full"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
ignore = [
    "F821",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
]
extend-select = [
    "I",
    "C901",
    "D",
]

[tool.ruff.lint.isort]
no-lines-before = [
    "first-party",
    "local-folder",
]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.creosote]
paths = [
    "schemaorg_lite",
]
deps-file = "pyproject.toml"
exclude-deps = [
    "tomli-w",
    "pyyaml",
    "pre-commit",
    "pdm-bump",
    "uv",
    "pdm",
    "pyfiglet",
    "pytest",
    "autotyping",
]

[tool.codespell]
skip = "*/data/*"
quiet-level = 3
ignore-words-list = "crate,uptodate"

[tool.bandit]
target = [
    "schemaorg_lite",
]
skips = [
    "B403",
    "B607",
    "B602",
    "B301",
    "B404",
    "B311",
    "B603",
]

[tool.refurb]
enable_all = true

[tool.pyright]
verboseOutput = true
include = [
    "schemaorg_lite",
]
exclude = [
    "scratch",
]
extraPaths = [
    ".venv/lib/python3.13/site-packages/",
]
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportOptionalMemberAccess = false
reportOptionalCall = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportPrivateUsage = "warning"
pythonVersion = "3.13"
pythonPlatform = "Darwin"

[tool.pdm]

[tool.vulture]
min_confidence = 84
paths = [
    "schemaorg_lite",
]

[project]
name = "schemaorg-lite"
version = "0.2.1"
description = "Python functions for applied use of schema.org"
dependencies = []
requires-python = ">=3.13"
readme = "README.md"
keywords = [
    "openschemas",
    "schema.org",
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development",
]
authors = [
    { name = "Vanessa Sochat", email = "vsoch@users.noreply.github.com" },
    { name = "lesleslie", email = "les@wedgwoodwebworks.com" },
]
maintainers = [
    { name = "lesleslie", email = "les@wedgwoodwebworks.com" },
    { name = "Vanessa Sochat", email = "vsoch@users.noreply.github.com" },
]

[project.license]
text = "BSD-3-Clause"

[project.urls]
Homepage = "https://github.com/lesleslie/schemaorg-lite"
Documentation = "https://github.com/lesleslie/schemaorg-lite"
Repository = "https://github.com/lesleslie/schemaorg-lite"

[build-system]
requires = [
    "pdm-backend",
]
build-backend = "pdm.backend"
